tests/ui/consts/const-eval/const_raw_ptr_ops2.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/const_raw_ptr_ops2.rs:7:26
   |
LL | const Z2: i32 = unsafe { *(42 as *const i32) };
   |                          ^^^^^^^^^^^^^^^^^^^ memory access failed: expected a pointer to 4 bytes of memory, but got 0x2a[noalloc] which is a dangling pointer (it has no provenance)

error[E0080]: evaluation of constant value failed
  --> $DIR/const_raw_ptr_ops2.rs:9:26
   |
LL | const Z3: i32 = unsafe { *(44 as *const i32) };
   |                          ^^^^^^^^^^^^^^^^^^^ memory access failed: expected a pointer to 4 bytes of memory, but got 0x2c[noalloc] which is a dangling pointer (it has no provenance)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
